--- a/portfolio.css
+++ b/portfolio.css
@@ -1,26 +1,12 @@
 
-html, body {
+body {
   margin: 0;
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
+  color: white;
+  background: rgb(2,0,36);
+  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(13,26,71,1) 77%);
 }
-
-@media (min-width: 768px) and (max-width: 1024px) {
-  .body{
-    margin: 0;
-    padding: 0;
-    max-width: 1024px;
-   }   
- }
-@media screen and (min-width: 320px) and (max-width: 500px) {
- .body{
-  margin: 0;
-  padding: 0;
-  max-width: 500px;
- }
-}
-
-
 
 /* .navbar{
     height: 10vh;
@@ -33,7 +19,8 @@ html, body {
 .nav {
   width: 100%;
   height: 10vh;
-  background-color: #8b1717;
+  background: rgb(2,0,36);
+  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(13,26,71,1) 77%);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -129,206 +116,90 @@ html, body {
   opacity: 1;
 }
 
+/* Hero section */
+
 .hero{
-  background-image: url('scattered-forcefields.svg');
   background-size: cover;
   height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-content: center;
+  flex-direction: row;
+  align-items: center;
   justify-content: center;
+  margin-top: -50px;
   }
-   
-  @media screen and (min-width: 768px) and (max-width: 1024px) {
-     .hero{
-      height: 70vh;
-      /* display: flex;
-      flex-direction: column;
-      align-content: center;
-      justify-content: center; */
-     }
-  }
-
-  @media (min-width: 320px) and (max-width: 500px) {
-     .hero{
-      height: 80vh;
-     }
-   } 
 
   .meet-me{
-    padding: 150px 5px 0px 200px;
-    height: 100vh;
+    margin-top: 50px;
+    margin: 10px 10px;
+    height: 60%;
+    width: 65rem;
     display: flex;
     flex-direction: row;
-}
-
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-     .meet-me{
-      padding: 5px 2px 2px 5px;
-      height: 100vh;
-      display: flex;
-      flex-direction: column;
-     }
-}
-
-@media (min-width: 320px) and (max-width: 500px) {
-    .meet-me{
-      padding: 5px 2px 2px 5px;
-      height: 80vh;
-      display: flex;
-      flex-direction: column;
-
-    }
- }
+  }
 
 .text-area{
-    width: 70%;
-    height: 80%;
+    width: 60%;
+    height: 90%;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    padding:0;
+    justify-content: center;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-  .text-area{
-     width:100%; 
-     height: 60vh;
-     padding: 0;
-     justify-content:center;
-     align-items: center;
-     
-   }
-}
-
-@media (min-width: 320px) and (max-width: 500px) {
-   .text-area{
-     width:100%; 
-     height: 95vh;
-     justify-content:center;
-     align-items: center;
-   }
+ .hero-image-container{
+  height: 90%;
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center ;
  }
 
+ .hero-image{
+   width: 400px;
+   height: 300px;
+ }
+ 
 
 .hero-text-1{
     font-size:large;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-  .hero-text-1{
-    font-size:30px;
-    font-size:large;
-}
-}
-
-@media (min-width: 320px) and (max-width: 500px) {
-  .hero-text-1{
-    font-size:small;
-    font-size:20px;
-    padding-top: -20px;
-}
- }
- 
-
 .hero-text-2{
-    font-size:80px;
+    font-size:3.5rem;
     font-family: 'Rowdies', cursive;
     margin: 0;
 }
-
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-  .hero-text-2{
-    font-size:70px;
-    font-family: 'Rowdies', cursive;
-    margin: 0;
-}
-}
-
-@media (min-width: 320px) and (max-width: 500px) {
-  .hero-text-2{
-    font-size:35px;
-    font-family: 'Rowdies', cursive;
-    margin: 0;
-  padding-top: 5px;
-}
- }
 
 .hero-text-3{
-    font-size:40px;
+    font-size:2rem;
     font-family: 'Rowdies', cursive;
     margin: 0;
-    letter-spacing: 15px;
+    letter-spacing: 5px;
 }
-
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-.hero-text-3{
-  font-size:40px;
-  font-family: 'Rowdies', cursive;
-  margin: 0;
-  letter-spacing: 8px;
-}
-}
-
-@media (min-width: 320px) and (max-width: 500px) {
-.hero-text-3{
-  font-size:20px;
-  font-family: 'Rowdies', cursive;
-  margin: 0;
-  letter-spacing: 3px;
-  padding-top: 10px;
-}
-}
-
 
 
 .intro{
-  width: 50%;
-  height: 15%;
-  margin-top: 5px;
- 
-}
-
-
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-    
-.intro{
-  width: 60%;
+  width: 70%;
   height: 20%;
   margin-top: 5px;
-  padding-top: 50px;
- 
-} 
 }
 
-@media (min-width: 320px) and (max-width: 500px) {
-        
-.intro{
-  width: 90%;
-  height: 30%;
-  padding-top: 20px;
-
-  /* margin-top: 5px; */
-  /* padding-top: 50px; */
- 
-} 
- }
-
-
-/* p {
-  color:#fafafa;
-  margin:0;
-  padding: 0;
-} */
+.icons{
+  margin-top: 15px;
+  width: 30px;
+  padding-left: 5px;
+  color: #fafafa;
+}
 
 button {
+  margin-top: 20px;
   background:transparent;
-  margin: 5px;
-  /* background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+  /* margin: 5px; */
+  background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
   background-image: -moz-linear-gradient(top, #3498db, #2980b9);
   background-image: -ms-linear-gradient(top, #3498db, #2980b9);
   background-image: -o-linear-gradient(top, #3498db, #2980b9);
-  background-image: linear-gradient(to bottom, #3498db, #2980b9); */
+  background-image: linear-gradient(to bottom, #3498db, #2980b9);
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
   border-radius: 0px;
@@ -336,7 +207,7 @@ button {
   font-family: Arial;
   color: #ffffff;
   font-size: 20px;
-  width: 15%;
+  width: 25%;
   padding: 10px 20px 10px 20px;
   text-decoration: none;
 }
@@ -351,6 +222,196 @@ button:hover {
   text-decoration: none;
 }
 
+hr{
+  width: 80%;
+}
+
+/* hero media break */
+@media screen and (max-width: 1000px) {
+
+  .hero{
+    height: 80vh;
+    margin-top: 10px;
+    }
+
+  .meet-me{
+    margin-top: 50px;
+    margin-left: 80px;
+    height: 70%;
+    width: 35rem;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .text-area{
+    width: 99%;
+    height: 99%;
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; */
+}
+
+.hero-text-1{
+  font-size:large;
+}
+
+.hero-text-2{
+  font-size:3rem;
+  margin-top: 20px;
+}
+
+.hero-text-3{
+  font-size:2rem;
+  margin-top: 20px;
+  letter-spacing: 5px;
+}
+
+  .hero-image-container{
+    visibility: hidden;
+  }
+
+  .intro{
+    width: 70%;
+    height: 20%;
+    margin-top: 5px;
+  }
+  
+  .icons{
+    margin-top: 10px;
+    width: 30px;
+  }
+  
+  button{
+    margin-top: 20px;
+    width: 30%;
+  }
+}
+
+/* hero media break tab*/
+
+@media screen and (max-width: 768px) {
+   
+.hero{
+  height: 70vh;
+  margin-top: 10px;
+  }
+
+  .meet-me{
+    margin-top: 10px;
+    margin-left: 80px;
+    height: 70%;
+    width: 35rem;
+    display: flex;
+    flex-direction: column;
+  }
+
+.text-area{
+    width: 99%;
+    height: 99%;
+    display: flex;
+    flex-direction: column;
+}
+
+ .hero-image-container{
+   visibility: hidden;
+ }
+
+.hero-text-1{
+    font-size:large;
+}
+
+.hero-text-2{
+    font-size:3rem;
+    margin-top: 10px;
+}
+
+.hero-text-3{
+    font-size:2rem;
+    margin-top: 10px;
+    letter-spacing: 5px;
+}
+
+.intro{
+  width: 70%;
+  height: 20%;
+  margin-top: 5px;
+}
+
+.icons{
+  margin-top: 20px;
+  width: 30px;
+}
+
+button{
+  margin-top: 20px;
+  width: 30%;
+}
+}
+
+/* hero media break mobile*/
+@media screen and (max-width: 480px) {
+     
+.hero{
+  height: 90vh;
+  max-width: 480px;
+  margin-top: 20px;
+  }
+
+  .meet-me{
+    height: 90%;
+    width: 95%;
+    margin-left: 0;
+  }
+
+.text-area{
+    width: 99%;
+    height: 99%;
+    margin-left: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: -40px;
+}
+
+ .hero-image-container{
+   visibility: hidden;
+ }
+
+.hero-text-1{
+    font-size:large;
+}
+
+.hero-text-2{
+    font-size:2.2rem;
+    margin-top: 10px;
+}
+
+.hero-text-3{
+   height: 15%;
+    font-size: 1.2rem;
+    margin-top: 15px;
+    text-align: center;
+}
+
+.intro{
+  width: 95%;
+  height: 20%;
+  margin-top: 0;
+  text-align: center;
+}
+
+.icons{
+  margin-top: 30px;
+  width: 30px;
+}
+
+button{
+  margin-top: 20px;
+  width: 50%;
+}
+}
+
+/* About Me section */
 .about-me{
   height: 90vh;
   display: flex;
@@ -359,27 +420,15 @@ button:hover {
   align-items: center; 
 }
 
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-  .about-me{
-    height: 90vh;
-    display: flex;
-    flex-direction: row; 
-    justify-content: center;
-    align-items: center; 
-  }
-  
-}
+.about-me-content{
+  width: 65rem;
+  height: 80%;
+  display: flex;
+  flex: row;
+  justify-content: center;
+  align-items: center;
 
-@media (min-width: 320px) and (max-width: 500px) {
-  .about-me{
-    height: 100vh;
-    display: flex;
-    flex-direction: column; 
-    justify-content: center;
-    align-items: center; 
-  }
-  
- }
+}
 
 .separator{
   display: flex;
@@ -392,64 +441,28 @@ button:hover {
 
 .separator .line{
   flex: 1;
-  height: 3px;
-  background-color: #000;
+  height: 1px;
+  background-color: #ffffff;
 }
 
 .about-me-text{
-  width: 25%;
-  height: 70%;  
+  width: 40%;
+  height: 70%; 
+  margin-top: -200px; 
   line-height: 25px;
-  padding-top: -10px;
 }
-
-
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-  .about-me-text{
-    width: 40%;
-    height: 70%;  
-    line-height: 20px;
-  }
-}
-
-@media (min-width: 320px) and (max-width: 500px) {
-  .about-me-text{
-    width: 90%;
-    height: 70%;  
-    line-height: 17px;
-    text-align: center;
-  }
- }
 
 .about-me-image-container{
   width: 350px;
   height: 350px;
+  margin-left: 20px;
   box-shadow: 10px 10px 2px teal;
-}
-
-@media (min-width: 320px) and (max-width: 500px) {
-  .about-me-image-container{
-    width: 200px;
-    height: 200px;
-    box-shadow: 5px 5px 2px teal;
-  }
 }
 
 .about-me-image{
   width: 350px;
   height: 350px;
 }
-
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-     
-}
-
-@media (min-width: 320px) and (max-width: 500px) {
-  .about-me-image{
-    width: 200px;
-    height: 200px;
-  }
- }
 
 ul {
   padding-left: 0.5rem;
@@ -466,279 +479,159 @@ ul {
   background-repeat: no-repeat;
   width: 80%;
   display: inline;
-}  
+} 
 
-.projects{
-  border: 2px solid rgb(38, 0, 255);
+/* About me tab */
+@media screen and (max-width: 768px) {
+  .about-me{
+    height: 100vh;
+  }
+
+  .about-me-content{
+    width: 90%;
+    height: 99%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 10px;
+  }
+
+  .about-me-text{
+    width: 99%;
+    height: 80%; 
+    margin-top: 30px;
+    line-height: 30px;
+  }
+
+  .proficiency{
+    display: flex;
+    flex-direction: column ;
+    align-items: center;
+  }
+
+    
+ul {
+  padding-left: 0.5rem;
+  list-style-type: none;
+  text-align: start;    
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 100vH;
-  background-color: #F5F5F5;
+  height: 15%;
 }
 
-.project-heading{
-  font-size: 40pt;
-  font-weight: 500;
-  color: #363638;
-  text-align: center;
+ ul li {
+  padding-left: 1rem;
+  background-image: url('Capture.PNG');
+  background-position: 0 0;
+  background-repeat: no-repeat;
+  width: 90%;
+  display: block;
+  margin: 10px;
+} 
+
+  .about-me-image-container{
+    width: 250px;
+    height: 250px;
+    margin-bottom: 40px;
+  }
+  
+  .about-me-image{
+    width: 250px;
+    height: 250px;
+    box-shadow: 10px 10px 2px teal;
+  }
+
+  .about-me-heading{
+    width:99%;
+    display: flex;
+    justify-content: center;
+  }
+
+  .separator{
+    width: 250px;
+    display: flex;
+    align-items: center;
+  }
+ 
+  .separator .line{
+    flex: 1;
+    height: 1px;
+    width: 20%;
+    background-color: #ffffff;
+  }
+  
 }
 
-.container {
-  margin-top: 30px;
+/* About me mobile */
+@media screen and (max-width: 480px) {
+  
+.about-me{
+  height: 160vh;
+  max-width: 480px;
   display: flex;
+  flex-direction: column; 
   justify-content: center;
-  flex-wrap: wrap;
-  width: 99%;
+  align-items: center; 
 }
 
-.item {
-  position: relative;
-  float: left;
-  overflow: hidden;
-  margin: 10px 1%;
-  min-width: 320px;
-  max-width: 410px;
-  width: 100%;
-  text-align: center;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
-  box-sizing: border-box;
+.about-me-image-container{
+  width: 350px;
+  height: 350px;
+  margin-left: 20px;
+  box-shadow: 10px 10px 2px teal;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-     
-.item {
-  position: relative;
-  float: left;
-  overflow: hidden;
-  margin: 10px 1%;
-  min-width: 320px;
-  /* max-width: 410px; */
-  width: 45%;
-  text-align: center;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
-  box-sizing: border-box;
-}
+.about-me-image{
+  width: 350px;
+  height: 350px;
 }
 
-.item:hover{
-  cursor: pointer;
-}
 
-.item *{
-  transition: all 0.35s ease-in-out;
-}
-
-img {
-  max-width: 100%;
-  vertical-align: top;
-  height: 310px;
-}
-
-.item:hover img {
-  opacity: 0;
-}
-
-.text{
-  width: 80%;
+.about-me-content{
   height: 90%;
-  position: absolute;
-  top: -100px;
-  left: 10%;
-  color: #01A2AC;
-}
-
-.text h3{
-  color: black;
-}
-
-.item:hover .text{
-  top: 20%;
-}
-
-.item:hover .button{
-  bottom: 20%;
-}
-
-.item .button{
-  position: absolute;
-  bottom: -100px;
-  left: 25%;
-  width: 50%;
-  border: 3px solid #01A2AC;
-  padding: 15px;
-  box-sizing: border-box;
-  transition: all 0.3s ease-in-out;
-}
-
-.button:hover{
-  background-color: #01A2AC;
-  color: #F5F5F5;
-}
-
-/* Modal */
-
-.modal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgba(0,0,0,0.4);
-}
-@media (min-width: 320px) and (max-width: 500px) {
-     
-.modal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgba(0,0,0,0.4);
-}
-}
-
-.modal-content {
-  background-color: #f3eaea;
-  margin: 5% auto;
-  box-sizing: border-box;
-  width: 700px;
-  max-height: 714px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
-}
-
-@media (min-width: 320px) and (max-width: 500px) {
-     
-.modal-content {
-  background-color: #f3eaea;
-  margin: 5% auto;
-  box-sizing: border-box;
-  max-width: 490px;
-  max-height: 50vh;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
- }
-}
-
-.scale{
-  animation: scale 0.5s;
-  animation-fill-mode: forwards;
-}
-@media (min-width: 320px) and (max-width: 500px) {
-     
-.scale{
- width: 99%;
- height: 80%;
-}
+  width: 95%;
+  display: flex ;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
 }
 
 
-@keyframes scale{
-  from{transform: scale(0);}
-  to{transform: scale(1);}
+.about-me-text{
+  width: 95%;
+  height: 70%; 
+  line-height: 25px;
 }
 
-#img{
-  width: 100%;
-  height: 450px;
+.about-me-image-container{
+  margin-top: 30px;
+  width: 250px;
+  height: 250px;
 }
 
-#details{
-  padding: 25px;
-  text-align: left;
-  position: relative;
-  height: 264px;
-  box-sizing: border-box;
-  border-top: 1px solid #363638;
+.about-me-image{
+  width: 250px;
+  height: 250px;
+  box-shadow: 10px 10px 2px teal;
+
 }
 
-#details *{
-  transition: all .3s;
 }
 
-#title{
-  padding-bottom: 15px;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-}
-
-#details .button{
-  position: absolute;
-  width: 30%;
-  background-color: #01A2AC;
-  color: #F5F5F5;
-  text-align: center;
-  left: 25px;
-  bottom: 35px;
-  padding: 15px;
-}
-
-#details i{
-  position: absolute;
-  bottom: 30px;
-  right: 25px;
-  font-size: 3rem;
-  color: #01A2AC;
-}
-
-#details .button:hover,
-i:hover{
-  cursor: pointer;
-  opacity: 0.8;
-}
-
-/* Close Button */
-.close {
-  color: #aaa;
-  font-size: 28px;
-  font-weight: bold;
-  position: absolute;
-  right: 10px;
-}
-
-.close:hover,
-.close:focus {
-  color: #363638;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-
+/* Contact me */
 .contact-me{
   display: flex;
   justify-content: center;
   height: 50vh;
   margin-top: 10px;
 }
-@media (min-width: 320px) and (max-width: 500px) {
-   .contact-me{
-  height: 60vh;
-   }
-}
+
 .form-container{
   padding-top: 10px;
   text-align: center;
   width: 40%;
 }
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-  .form-container{
-    padding-top: 10px;
-    text-align: center;
-    width: 80%;
-  }
-}
-
-@media (min-width: 320px) and (max-width: 500px) {
-  .form-container{
-    padding-top: 10px;
-    text-align: center;
-    width: 80%;
-  }
- }
 
 
 .form-feild{
@@ -774,7 +667,63 @@ i:hover{
   margin-top: 20px;
 }
 
-.icons{
+.footer-icons{
 height: 50px;
 width: 50px;
+}
+
+/* contact me tab */
+@media screen and (max-width: 768px) {
+  .contact-me{
+    display: flex;
+    justify-content: center;
+    height: 50vh;
+    margin-top: 10px;
+  }
+  
+  .form-container{
+    padding-top: 10px;
+    text-align: center;
+    width: 60%;
+  }
+  
+  
+  .form-feild{
+    margin: 0 auto;
+    max-width: 600px;
+    padding: 5px;
+    border-radius: 9px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .footer{
+    background: transparent;
+    height: 15vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+/* contact me mobile */
+@media screen and (max-width: 480px) {
+  .contact-me{
+    display: flex;
+    justify-content: center;
+    height: 60vh;
+    margin-top: 10px;
+  }
+  
+  .form-container{
+    padding-top: 10px;
+    text-align: center;
+    width: 70%;
+  }
+
+  .footer-icons{
+    height: 40px;
+    width: 40px;
+    }
 }
