--- a/portfolio.css
+++ b/portfolio.css
@@ -1,4 +1,3 @@
-
 body {
   margin: 0;
   padding: 0;
@@ -8,118 +7,224 @@ body {
   background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(13,26,71,1) 77%);
 }
 
-/* .navbar{
-    height: 10vh;
-} */
-.logo,
-.content {
-  color: #fafafa;
-}
 
-.nav {
-  width: 100%;
-  height: 10vh;
-  background: rgb(2,0,36);
-  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(13,26,71,1) 77%);
+
+.navbar-area {
+  background: transparent;
+}
+.site-navbar {
+  height: 30px;
+  padding: 20px 100px 5px 30px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: sticky;
-  top: 0;
-  z-index: 3;
 }
-
-
-.logo,
-#hamburger {
-  margin: 4%;
-}
-
-#hamburger {
-  opacity: 0.5;
-  cursor: pointer;
-  transition: opacity 0.25s linear;
-  width: clamp(1.5rem, 2vw + 1.1rem, 6rem);
-  height: clamp(2rem, 1.4vw + 1.7rem, 5rem);
-  display: flex;
-  align-items: center;
-}
-
-#hamburger:hover {
-  opacity: 1;
-}
-
-#hamburger div,
-#hamburger div:after,
-#hamburger div:before {
-  background-color: #fafafa;
-  border-radius: 10px;
-  width: clamp(1.5rem, 2vw + 1.1rem, 6rem);
-  height: clamp(0.2rem, 0.3vw + 0.1rem, 0.8rem);
-  transition: all 0.15s linear;
-}
-
-#hamburger div:before,
-#hamburger div:after {
-  content: "";
-  position: absolute;
-}
-
-#hamburger div:before {
-  transform: translateY(-200%);
-}
-
-#hamburger div:after {
-  transform: translateY(200%);
-}
-
-#hamburger.open div {
-  background: transparent;
-}
-
-#hamburger.open div:before {
-  transform: rotate(45deg);
-}
-
-#hamburger.open div:after {
-  transform: rotate(-45deg);
-}
-
-#overlay {
-  position: fixed;
-  width: 100%;
-  min-height: 100%;
-  background-color: #1a1a1a;
-  z-index: 2;
-  transform: translateY(-100%);
-  transition: all 0.5s ease-in-out;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-#overlay.menu {
-  transform: translateY(0%);
-}
-
-#overlay a {
+a.site-logo {
+  font-size: 1.2rem;
+  font-weight: 800;
+  margin-left: 10px;
+  padding-bottom: 20px;
+  text-transform: uppercase;
+  color: #fff;
   text-decoration: none;
-  color: #fafafa;
-  font-size: clamp(1rem, 4.1vw + 0.2rem, 10rem);
-  margin: 2%;
-  opacity: 0.5;
-  transition: opacity 0.2s linear;
 }
 
-#overlay a:hover {
-  opacity: 1;
+.site-navbar ul {
+  font-size: 12px;
+  height: 40px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
 }
+.site-navbar ul li a {
+  height: 10px;
+  color: #fff;
+  margin-top: -20px;
+  padding: 5px;
+  display: block;
+  text-decoration: none;
+  text-transform: capitalize;
+} 
+.site-navbar ul li a:hover {
+  background: rgba(255,255,255,.1);
+}  
+
+.nav-toggler {
+  border: none;
+  margin-right: 8px;
+  width: 45px;
+  padding: 5px;
+  background-color: transparent;
+  cursor: pointer;
+  height: 39px;
+  display: none;
+}
+
+.nav-toggler span, 
+.nav-toggler span:before, 
+.nav-toggler span:after {
+  width: 28px;
+  height: 3px;
+  background-color: #fff;
+  display: block;
+  transition: .3s;
+}
+.nav-toggler span:before {
+  content: '';
+  transform: translateY(-9px);
+}
+.nav-toggler span:after {
+  content: '';
+  transform: translateY(6px);
+}
+.nav-toggler.toggler-open span {
+  background-color: transparent;
+}
+.nav-toggler.toggler-open span:before {
+  transform: translateY(0px) rotate(45deg);
+}
+.nav-toggler.toggler-open span:after {
+  transform: translateY(-3px) rotate(-45deg);
+}
+
+  .site-navbar ul li {
+    width: 100%;
+    text-align: center;
+  }
+  .site-navbar ul li a {
+    padding: 25px;
+  }
+  .site-navbar ul li a:hover {
+    background-color: rgba(255,255,255,.1);
+  }
+  .site-navbar ul.open {
+    max-height: 100vh;
+    overflow: visible;
+  }
+
+@media screen and (max-width: 1024px) {
+  .site-navbar {
+
+    height: 20px;
+    padding: 15px 70px 5px 5px;
+  }
+  
+  .site-navbar ul {
+    font-size: 12px;
+    height: 30px;
+    width: 50%;
+    margin: 0;
+    padding: 0;
+  }
+  .site-navbar ul li a {
+    height: 10px;
+    margin-top: 0;
+    padding: 2px 20px 10px 0;
+    font-size: 12px;
+  } 
+  .site-navbar ul li a:hover {
+    background: rgba(255,255,255,.1);
+  }  
+}   
+
+ /* MOBILE LANDSCAPE */
+ @media (max-width: 600px) and (max-height: 500px) and (orientation: landscape) { 
+
+  .navbar-area{
+    height: 40px;
+  }
+  
+  a.site-logo{
+    font-size: 20px;
+    margin-left: 10px;
+    margin-top: -30px;
+    }
+    .container {
+      max-width: 600px;
+    }
+    .nav-toggler{
+      display: block;
+      margin-top: -50px;
+      margin-right: -60px ;
+    }
+    .site-navbar { 
+      min-height: 60px;
+    } 
+
+    .site-navbar ul {
+      position: absolute;
+      width: 100%;
+      margin-top: 40px;
+      height: 100vh;
+      left: 0;
+      top: 0;
+      flex-direction: column;
+      align-items: center;
+      border-top: 1px solid #444;
+      background-color: rgba(0,0,0,.75);
+      max-height: 0;
+      overflow: hidden;
+      transition: .3s;
+    }   
+
+.site-navbar ul li a {
+  font-size: 20px;
+  margin-top: 20px;
+}
+
+  }   
+
+@media screen and (max-width: 480px) {
+ 
+  .navbar-area{
+    height: 40px;
+  }
+  
+  a.site-logo{
+    font-size: 15px;
+    margin-left: 10px;
+    margin-top: -30px;
+    }
+    .container {
+      max-width: 480px;
+    }
+    .nav-toggler{
+      display: block;
+      margin-top: -50px;
+      margin-right: -60px ;
+    }
+    .site-navbar {
+      min-height: 60px;
+    }
+
+    .site-navbar ul {
+      position: absolute;
+      width: 100%;
+      margin-top: 40px;
+      height: 100vh;
+      left: 0;
+      top: 0;
+      flex-direction: column;
+      align-items: center;
+      border-top: 1px solid #444;
+      background-color: rgba(0,0,0,.75);
+      max-height: 0;
+      overflow: hidden;
+      transition: .3s;
+    }   
+
+    .site-navbar ul li a {
+      font-size: 20px;
+      margin-top: 25px;
+    }
+
+}
+
 
 /* Hero section */
 
 .hero{
-  background-size: cover;
   height: 100vh;
   display: flex;
   flex-direction: row;
@@ -131,10 +236,12 @@ body {
   .meet-me{
     margin-top: 50px;
     margin: 10px 10px;
-    height: 60%;
-    width: 65rem;
+    height: 70%;
+    width: 75%;
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    align-items: center ;
   }
 
 .text-area{
@@ -146,7 +253,7 @@ body {
 }
 
  .hero-image-container{
-  height: 90%;
+  height: 80%;
   width: 40%;
   display: flex;
   flex-direction: column;
@@ -155,8 +262,8 @@ body {
  }
 
  .hero-image{
-   width: 400px;
-   height: 300px;
+   width: 100%;
+   height: 90%;
  }
  
 
@@ -177,11 +284,11 @@ body {
     letter-spacing: 5px;
 }
 
-
-.intro{
-  width: 70%;
+.hero-paragraph{
+  width: 80%;
   height: 20%;
   margin-top: 5px;
+  opacity: 60%;
 }
 
 .icons{
@@ -191,34 +298,24 @@ body {
   color: #fafafa;
 }
 
+
 button {
   margin-top: 20px;
-  background:transparent;
-  /* margin: 5px; */
-  background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
-  background-image: -moz-linear-gradient(top, #3498db, #2980b9);
-  background-image: -ms-linear-gradient(top, #3498db, #2980b9);
-  background-image: -o-linear-gradient(top, #3498db, #2980b9);
-  background-image: linear-gradient(to bottom, #3498db, #2980b9);
-  -webkit-border-radius: 0;
-  -moz-border-radius: 0;
-  border-radius: 0px;
+  background:tomato;
+  border-radius: 5px;
   border-color: black;
   font-family: Arial;
   color: #ffffff;
   font-size: 20px;
-  width: 25%;
+  width: 30%;
   padding: 10px 20px 10px 20px;
   text-decoration: none;
 }
 
 button:hover {
-  background: #3cfd56;
-  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+  border: 2px solid #fff;
+  border-radius: 5px;
+  background: transparent;
   text-decoration: none;
 }
 
@@ -226,504 +323,212 @@ hr{
   width: 80%;
 }
 
-/* hero media break */
-@media screen and (max-width: 1000px) {
-
-  .hero{
-    height: 80vh;
-    margin-top: 10px;
-    }
-
+ /* SMALL SCREENS, LAPTOPS */
+ @media only screen and (max-width: 1024px) {
+    
   .meet-me{
     margin-top: 50px;
-    margin-left: 80px;
+    margin: 10px 10px;
     height: 70%;
-    width: 35rem;
-    display: flex;
-    flex-direction: column;
-  }
-
-  .text-area{
-    width: 99%;
-    height: 99%;
-    display: flex;
-    flex-direction: column;
-    /* align-items: center; */
-}
-
-.hero-text-1{
-  font-size:large;
-}
-
-.hero-text-2{
-  font-size:3rem;
-  margin-top: 20px;
-}
-
-.hero-text-3{
-  font-size:2rem;
-  margin-top: 20px;
-  letter-spacing: 5px;
-}
-
-  .hero-image-container{
-    visibility: hidden;
-  }
-
-  .intro{
     width: 70%;
-    height: 20%;
-    margin-top: 5px;
-  }
-  
-  .icons{
-    margin-top: 10px;
-    width: 30px;
-  }
-  
-  button{
-    margin-top: 20px;
-    width: 30%;
-  }
-}
-
-/* hero media break tab*/
-
-@media screen and (max-width: 768px) {
-   
-.hero{
-  height: 70vh;
-  margin-top: 10px;
-  }
-
-  .meet-me{
-    margin-top: 10px;
-    margin-left: 80px;
-    height: 70%;
-    width: 35rem;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center ;
   }
 
 .text-area{
-    width: 99%;
-    height: 99%;
+    width: 90%;
+    height: 90%;
     display: flex;
     flex-direction: column;
+    justify-content: center;
 }
 
  .hero-image-container{
-   visibility: hidden;
+   display: none;
+ 
  }
-
-.hero-text-1{
-    font-size:large;
-}
 
 .hero-text-2{
     font-size:3rem;
-    margin-top: 10px;
 }
 
 .hero-text-3{
-    font-size:2rem;
-    margin-top: 10px;
-    letter-spacing: 5px;
+    font-size:1.5rem;
+    letter-spacing: 8px;
 }
 
-.intro{
-  width: 70%;
-  height: 20%;
-  margin-top: 5px;
-}
-
-.icons{
-  margin-top: 20px;
-  width: 30px;
-}
-
-button{
-  margin-top: 20px;
-  width: 30%;
-}
-}
-
-/* hero media break mobile*/
-@media screen and (max-width: 480px) {
-     
-.hero{
-  height: 90vh;
-  max-width: 480px;
-  margin-top: 20px;
-  }
-
-  .meet-me{
-    height: 90%;
-    width: 95%;
-    margin-left: 0;
-  }
-
-.text-area{
-    width: 99%;
-    height: 99%;
-    margin-left: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: -40px;
-}
-
- .hero-image-container{
-   visibility: hidden;
- }
-
-.hero-text-1{
-    font-size:large;
-}
-
-.hero-text-2{
-    font-size:2.2rem;
-    margin-top: 10px;
-}
-
-.hero-text-3{
-   height: 15%;
-    font-size: 1.2rem;
-    margin-top: 15px;
-    text-align: center;
-}
-
-.intro{
-  width: 95%;
-  height: 20%;
-  margin-top: 0;
-  text-align: center;
-}
-
-.icons{
-  margin-top: 30px;
-  width: 30px;
-}
-
-button{
-  margin-top: 20px;
-  width: 50%;
-}
-}
-
-/* About Me section */
-.about-me{
-  height: 90vh;
-  display: flex;
-  flex-direction: row; 
-  justify-content: center;
-  align-items: center; 
-}
-
-.about-me-content{
-  width: 65rem;
-  height: 80%;
-  display: flex;
-  flex: row;
-  justify-content: center;
-  align-items: center;
-
-}
-
-.separator{
-  display: flex;
-  align-items: center;
-}
-
-.separator h2{
-  padding: 0 0.5rem; 
-}
-
-.separator .line{
-  flex: 1;
-  height: 1px;
-  background-color: #ffffff;
-}
-
-.about-me-text{
-  width: 40%;
-  height: 70%; 
-  margin-top: -200px; 
-  line-height: 25px;
-}
-
-.about-me-image-container{
-  width: 350px;
-  height: 350px;
-  margin-left: 20px;
-  box-shadow: 10px 10px 2px teal;
-}
-
-.about-me-image{
-  width: 350px;
-  height: 350px;
-}
-
-ul {
-  padding-left: 0.5rem;
-  list-style-type: none;
-  text-align: start;    
-  display: flex;
-  height: 15%;
-}
-
- ul li {
-  padding-left: 1rem;
-  background-image: url('Capture.PNG');
-  background-position: 0 0;
-  background-repeat: no-repeat;
-  width: 80%;
-  display: inline;
 } 
 
-/* About me tab */
-@media screen and (max-width: 768px) {
-  .about-me{
+ /* iPADS, TABLETS */
+ @media only screen and (max-width: 768px) {
+
+  .hero{
     height: 100vh;
   }
 
-  .about-me-content{
+  .meet-me{
+    margin: 40px 10px 10px 0;
+    height: 80%;
     width: 90%;
-    height: 99%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center ;
+  }
+
+.text-area{
+    width: 75%;
+    height: 90%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    margin: 10px;
-  }
-
-  .about-me-text{
-    width: 99%;
-    height: 80%; 
-    margin-top: 30px;
-    line-height: 30px;
-  }
-
-  .proficiency{
-    display: flex;
-    flex-direction: column ;
-    align-items: center;
-  }
-
-    
-ul {
-  padding-left: 0.5rem;
-  list-style-type: none;
-  text-align: start;    
-  display: flex;
-  height: 15%;
 }
 
- ul li {
-  padding-left: 1rem;
-  background-image: url('Capture.PNG');
-  background-position: 0 0;
-  background-repeat: no-repeat;
+ .hero-image-container{
+   display: none;
+ 
+ }
+
+.hero-text-2{
+    font-size:3rem;
+}
+
+.hero-text-3{
+    font-size:1.5rem;
+    letter-spacing: 5px;
+}
+
+.hero-paragraph{
   width: 90%;
-  display: block;
-  margin: 10px;
+  font-size: 15px;
+}
+
+button {
+  margin-top: 20px;
+  font-size: 16px;
+  width: 30%;
+  height: 10%;
+  padding: 5px 10px 5px 10px;
+}
+
+       
 } 
 
-  .about-me-image-container{
-    width: 250px;
-    height: 250px;
-    margin-bottom: 40px;
-  }
+ /* MOBILE LANDSCAPE */
+ @media (max-width: 600px) and (max-height: 500px) and (orientation: landscape) { 
+    
   
-  .about-me-image{
-    width: 250px;
-    height: 250px;
-    box-shadow: 10px 10px 2px teal;
+  .hero{
+    height: 120vh;
   }
 
-  .about-me-heading{
-    width:99%;
+  .meet-me{
+    margin: 60px 10px 10px 0;
+    height: 80%;
+    width: 90%;
     display: flex;
+    flex-direction: row;
     justify-content: center;
+    align-items: center ;
   }
 
-  .separator{
-    width: 250px;
-    display: flex;
-    align-items: center;
-  }
+.text-area{
+    width: 90%;
+    height: 95%;
+}
+
+ .hero-image-container{
+   display: none;
  
-  .separator .line{
-    flex: 1;
-    height: 1px;
-    width: 20%;
-    background-color: #ffffff;
-  }
-  
+ }
+
+.hero-text-2{
+    font-size:2rem;
+  margin-top: -5px;
 }
 
-/* About me mobile */
-@media screen and (max-width: 480px) {
-  
-.about-me{
-  height: 160vh;
-  max-width: 480px;
-  display: flex;
-  flex-direction: column; 
-  justify-content: center;
-  align-items: center; 
+.hero-text-3{
+    font-size:1rem;
+    letter-spacing: 5px;
 }
 
-.about-me-image-container{
-  width: 350px;
-  height: 350px;
-  margin-left: 20px;
-  box-shadow: 10px 10px 2px teal;
+.hero-paragraph{
+  width: 100%;
+  font-size: 14px;
 }
 
-.about-me-image{
-  width: 350px;
-  height: 350px;
+.icons{
+ display: none;
 }
 
-
-.about-me-content{
-  height: 90%;
-  width: 95%;
-  display: flex ;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin-top: 30px;
-}
-
-
-.about-me-text{
-  width: 95%;
-  height: 70%; 
-  line-height: 25px;
-}
-
-.about-me-image-container{
-  margin-top: 30px;
-  width: 250px;
-  height: 250px;
-}
-
-.about-me-image{
-  width: 250px;
-  height: 250px;
-  box-shadow: 10px 10px 2px teal;
-
-}
-
-}
-
-/* Contact me */
-.contact-me{
-  display: flex;
-  justify-content: center;
-  height: 50vh;
+button {
   margin-top: 10px;
+  font-size: 16px;
+  width: 30%;
+  height: 15%;
+  padding: 2px 5px 2px 5px;
 }
 
-.form-container{
-  padding-top: 10px;
-  text-align: center;
-  width: 40%;
-}
 
+} 
 
-.form-feild{
-  margin: 0 auto;
-  max-width: 600px;
-  padding: 5px;
-  border-radius: 9px;
-  display: flex;
+/* MOBILE PHONE POTRAIT */
+@media only screen and (max-width: 480px) {
+
+  .hero{
+    height: 100vh;
+    margin-top: 5px;
+
+  }
+
+  .meet-me{
+    margin: -20px 0 0 0;
+    height: 90%; 
+    width: 95%;
+    
+  }
+
+.text-area{
   flex-direction: column;
-}
-
-#message{
-  height: 70px;
-}
-
-.input-feild .input{
-  background: transparent;
-  border: 0;
-  border-bottom: 2px solid rgb(116, 109, 109);
-  padding: 10px;
-  margin: 10px 20px;
-  width: 90%;
-  
-}
-
-.footer{
-  background: transparent;
-  height: 25vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin-top: 20px;
-}
-
-.footer-icons{
-height: 50px;
-width: 50px;
-}
-
-/* contact me tab */
-@media screen and (max-width: 768px) {
-  .contact-me{
-    display: flex;
-    justify-content: center;
-    height: 50vh;
-    margin-top: 10px;
-  }
-  
-  .form-container{
-    padding-top: 10px;
-    text-align: center;
-    width: 60%;
-  }
-  
-  
-  .form-feild{
-    margin: 0 auto;
-    max-width: 600px;
-    padding: 5px;
-    border-radius: 9px;
-    display: flex;
-    flex-direction: column;
-  }
-
-  .footer{
-    background: transparent;
-    height: 15vh;
-    display: flex;
-    flex-direction: column;
+    width: 95%;
+    height: 95%;
     justify-content: center;
     align-items: center;
-  }
 }
 
-/* contact me mobile */
-@media screen and (max-width: 480px) {
-  .contact-me{
-    display: flex;
-    justify-content: center;
-    height: 60vh;
-    margin-top: 10px;
-  }
-  
-  .form-container{
-    padding-top: 10px;
-    text-align: center;
-    width: 70%;
-  }
+ .hero-image-container{
+   display: none;
+ 
+ }
 
-  .footer-icons{
-    height: 40px;
-    width: 40px;
-    }
+.hero-text-2{
+    font-size: 1.8rem;
+  margin-top: -5px;
+}
+
+.hero-text-3{
+    font-size: 0.8rem;
+    letter-spacing: 3px;
+}
+
+.hero-paragraph{
+  width: 100%;
+  font-size: 12px;
+}
+
+.icons{
+ display: none;
+}
+
+button {
+  margin-top: 10px;
+  font-size: 16px;
+  width: 40%;
+  height: 10%;
+  padding: 2px 5px 2px 5px;
+}
+
+
 }
