--- a/portfolio.css
+++ b/portfolio.css
@@ -129,7 +129,7 @@ a.site-logo {
 }   
 
  /* MOBILE LANDSCAPE */
- @media (max-width: 600px) and (max-height: 500px) and (orientation: landscape) { 
+ @media (max-width: 750px) and (max-height: 500px) and (orientation: landscape) { 
 
   .navbar-area{
     height: 40px;
@@ -417,15 +417,15 @@ button {
 } 
 
  /* MOBILE LANDSCAPE */
- @media (max-width: 600px) and (max-height: 500px) and (orientation: landscape) { 
+ @media (max-width: 750px) and (max-height: 500px) and (orientation: landscape) { 
     
   
   .hero{
-    height: 120vh;
+    height: 150vh;
   }
 
   .meet-me{
-    margin: 60px 10px 10px 0;
+    margin: 100px 5px 5px 0;
     height: 80%;
     width: 90%;
     display: flex;
@@ -435,7 +435,8 @@ button {
   }
 
 .text-area{
-    width: 90%;
+  border: 2px solid rgb(21, 255, 0);
+    width: 95%;
     height: 95%;
 }
 
@@ -455,17 +456,21 @@ button {
 }
 
 .hero-paragraph{
+  margin-top: -12px;
   width: 100%;
   font-size: 14px;
 }
 
 .icons{
- display: none;
+  padding-left: 0;
+  margin-top: 5px;
+  width: 30px;
+  height: 30px;
 }
 
 button {
   margin-top: 10px;
-  font-size: 16px;
+  font-size: 20px;
   width: 30%;
   height: 15%;
   padding: 2px 5px 2px 5px;
@@ -478,7 +483,7 @@ button {
 @media only screen and (max-width: 480px) {
 
   .hero{
-    border: 2px solid green;
+    border: 2px solid rgb(228, 136, 16);
     height: 80vh;
     margin-top: 40px;
 
@@ -486,9 +491,8 @@ button {
 
   .meet-me{
     margin: 0;
-    height: 90%; 
+    height: 70%; 
     width: 95%;
-    
   }
 
 .text-area{
