--- a/portfolio.css
+++ b/portfolio.css
@@ -421,11 +421,11 @@ button {
     
   
   .hero{
-    height: 150vh;
+    height: 130vh;
   }
 
   .meet-me{
-    margin: 100px 5px 5px 0;
+    margin: 25px 5px 5px 0;
     height: 80%;
     width: 90%;
     display: flex;
@@ -435,9 +435,9 @@ button {
   }
 
 .text-area{
-  border: 2px solid rgb(21, 255, 0);
+  border: 2px solid rgb(255, 38, 0);
     width: 95%;
-    height: 95%;
+    height: 80%;
 }
 
  .hero-image-container{
@@ -446,12 +446,12 @@ button {
  }
 
 .hero-text-2{
-    font-size:2rem;
+    font-size:2.5rem;
   margin-top: -5px;
 }
 
 .hero-text-3{
-    font-size:1rem;
+    font-size: 1.4rem;
     letter-spacing: 5px;
 }
 
@@ -464,8 +464,8 @@ button {
 .icons{
   padding-left: 0;
   margin-top: 5px;
-  width: 30px;
-  height: 30px;
+  width: 35px;
+  height: 35px;
 }
 
 button {
@@ -483,7 +483,7 @@ button {
 @media only screen and (max-width: 480px) {
 
   .hero{
-    border: 2px solid rgb(228, 136, 16);
+    border: 2px solid rgb(157, 16, 228);
     height: 80vh;
     margin-top: 40px;
 
@@ -516,13 +516,13 @@ button {
 
 .hero-text-2{
   height: 20%;
-    font-size: 2rem;
+    font-size: 2.2rem;
   margin-top: -5px;
 }
 
 .hero-text-3{
   height: 10%;
-    font-size: 1rem;
+    font-size: 1.2rem;
     letter-spacing: 3px;
 }
 
@@ -530,20 +530,21 @@ button {
   width: 100%;
   font-size: 15px;
   height: 30%;
+  text-align: center;
 }
 
 .icons{
   padding-left: 0;
-  margin-top: 5px;
-  width: 25px;
-  height: 25px;
+  margin-top: 8px;
+  width: 40px;
+  height: 40px;
 }
 
 button {
-  margin-top: 10px;
+  margin-top: 15px;
   font-size: 18px;
   width: 50%;
-  height: 10%;
+  height: 20%;
   padding: 2px 5px 2px 5px;
 }
 
