--- a/portfolio.css
+++ b/portfolio.css
@@ -146,7 +146,7 @@ a.site-logo {
     .nav-toggler{
       display: block;
       margin-top: -50px;
-      margin-right: -60px ;
+      margin-right: -70px ;
     }
     .site-navbar { 
       min-height: 60px;
@@ -222,8 +222,7 @@ a.site-logo {
 }
 
 
-/* Hero section */
-
+/* HERO SECTION STARTS */
 .hero{
   height: 100vh;
   display: flex;
@@ -234,6 +233,7 @@ a.site-logo {
   }
 
   .meet-me{
+    border: 1px solid teal;
     margin-top: 50px;
     margin: 10px 10px;
     height: 70%;
@@ -253,8 +253,8 @@ a.site-logo {
 }
 
  .hero-image-container{
-  height: 80%;
-  width: 40%;
+  height: 70%;
+  width: 35%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -272,13 +272,13 @@ a.site-logo {
 }
 
 .hero-text-2{
-    font-size:3.5rem;
+    font-size:4rem;
     font-family: 'Rowdies', cursive;
-    margin: 0;
+    margin: 10px;
 }
 
 .hero-text-3{
-    font-size:2rem;
+    font-size:2.5rem;
     font-family: 'Rowdies', cursive;
     margin: 0;
     letter-spacing: 5px;
@@ -292,7 +292,7 @@ a.site-logo {
 }
 
 .icons{
-  margin-top: 15px;
+  margin-top: -10px;
   width: 30px;
   padding-left: 5px;
   color: #fafafa;
@@ -435,7 +435,6 @@ button {
   }
 
 .text-area{
-  border: 2px solid rgb(255, 38, 0);
     width: 95%;
     height: 80%;
 }
@@ -483,7 +482,6 @@ button {
 @media only screen and (max-width: 480px) {
 
   .hero{
-    border: 2px solid rgb(157, 16, 228);
     height: 80vh;
     margin-top: 40px;
 
