--- a/portfolio.css
+++ b/portfolio.css
@@ -233,7 +233,7 @@ a.site-logo {
   }
 
   .meet-me{
-    border: 1px solid rgb(128, 55, 0);
+    border: 1px solid rgb(4, 128, 0);
     margin-top: 50px;
     margin: 10px 10px;
     height: 70%;
@@ -274,7 +274,7 @@ a.site-logo {
 .hero-text-2{
     font-size:3rem;
     font-family: 'Rowdies', cursive;
-    margin: 10px;
+    margin: 0;
     text-align: start;
 }
 
@@ -294,7 +294,8 @@ a.site-logo {
 
 .icons{
   margin-top: -10px;
-  width: 30px;
+  width: 40px;
+  height: 40px;
   padding-left: 5px;
   color: #fafafa;
 }
@@ -308,7 +309,7 @@ button {
   font-family: Arial;
   color: #ffffff;
   font-size: 20px;
-  width: 30%;
+  width: 35%;
   padding: 10px 20px 10px 20px;
   text-decoration: none;
 }
