--- a/portfolio.css
+++ b/portfolio.css
@@ -1178,7 +1178,7 @@ button {
 
  .project-content-1{
    background-color: rgb(34, 34, 112);
-   color: #d8f2d2;
+   color: #3ef515;
    /* color: #d8c0b7; */
    font-size: 15px;
    opacity: 90%;
