--- a/portfolio.css
+++ b/portfolio.css
@@ -251,6 +251,7 @@ a.site-logo {
   }
 
   .meet-me{
+    border: 2px solid red;
     margin-top: 50px;
     margin: 10px 10px;
     height: 70%;
@@ -262,6 +263,7 @@ a.site-logo {
   }
 
 .text-area{
+  border: 2px solid yellow;
     width: 60%;
     height: 80%;
     display: flex;
@@ -285,10 +287,12 @@ a.site-logo {
  
 
 .hero-text-1{
+  border: 2px solid rgb(204, 0, 255);
     font-size:large;
 }
 
 .hero-text-2{
+  border: 2px solid rgb(170, 255, 0);
     font-size:3rem;
     font-family: 'Rowdies', cursive;
     margin: 0;
@@ -296,6 +300,7 @@ a.site-logo {
 }
 
 .hero-text-3{
+  border: 2px solid rgb(251, 255, 0);
     font-size:2.2rem;
     font-family: 'Rowdies', cursive;
     margin: 0;
@@ -303,6 +308,7 @@ a.site-logo {
 }
 
 .hero-paragraph{
+  border: 2px solid rgb(255, 0, 247);
   width: 80%;
   height: 20%;
   margin-top: 5px;
@@ -318,6 +324,7 @@ a.site-logo {
 
 .icons{
   margin-top: 8px;
+  padding-left: 5px;
   width: 40px;
   height: 40px;
   color: #fafafa;
