--- a/portfolio.css
+++ b/portfolio.css
@@ -25,7 +25,6 @@ body {
        
 } 
 
-
 /* NAV SECTION BEGINS */
 .navbar-area {
   background: transparent;
@@ -48,7 +47,7 @@ a.site-logo {
 }
 
 .site-navbar ul {
-  font-size: 12px;
+  font-size: 15px;
   height: 40px;
   margin: 0;
   padding: 0;
@@ -239,23 +238,21 @@ a.site-logo {
 }
 /* NAV SECTION ENDS */
 
-
 /* HERO SECTION STARTS */
 .hero{
-  height: 90vh;
+  height: 80vh;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  margin-top: -50px;
+  margin-top: 20px;
   }
 
   .meet-me{
     border: 2px solid rgb(14, 238, 238);
-    margin-top: 100px;
     margin: 10px 10px;
-    height: 80%;
-    width: 75%;
+    height: 90%;
+    width: 70%;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -272,7 +269,7 @@ a.site-logo {
 }
 
  .hero-image-container{
-  height: 80%;
+  height: 70%;
   width: 40%;
   display: flex;
   flex-direction: column;
@@ -289,32 +286,38 @@ a.site-logo {
 .hero-text-1{
   height: 10%;
   margin: 0;
-  /* border: 2px solid rgb(204, 0, 255); */
+  border: 2px solid rgb(204, 0, 255);
     font-size:large;
 }
 
 .hero-text-2{
-  /* border: 2px solid rgb(170, 255, 0); */
+  border: 2px solid rgb(170, 255, 0);
     font-size: 3.5rem;
-  height: 20%;
+  height: 15%;
     font-family: 'Rowdies', cursive;
     margin: 0;
     text-align: start;
 }
 
 .hero-text-3{
-  /* border: 2px solid rgb(251, 255, 0); */
-  height: 15%;  
+  border: 2px solid rgb(251, 255, 0);
+  height: 12%;  
   font-size: 1.8rem;
     font-family: 'Rowdies', cursive;
     margin: 0;
     letter-spacing: 5px;
 }
 
-.hero-paragraph{
-  /* border: 2px solid rgb(255, 0, 247); */
-  width: 90%;
+.intro{
+  border: 2px solid red;
   height: 23%;
+  margin-top: 5px;
+}
+
+.hero-paragraph{
+  border: 2px solid rgb(255, 0, 247);
+  width: 90%;
+  height: 100%;
   margin: 0;
   opacity: 70%;
   font-size: 20px;
@@ -336,7 +339,6 @@ a.site-logo {
   height: 40px;
   color: #fafafa;
 }
-
 
 button {
   margin-top: 17px;
@@ -612,977 +614,4 @@ button {
 }
 }
 /* HERO SECTION ENDS */
-
-
-
-/* ABOUT ME SECTION BEGINS */
-.about-me{
-  height: 80vh;
-  display: flex;
-  flex-direction: row; 
-  justify-content: center;
-  align-items: center; 
-}
-
-.about-me-content{
-  width: 80%;
-  height: 90%;
-  padding: 0 20px;
-  display: flex;
-  flex: row;
-  justify-content: center;
-  align-items: center;
-}
-
-.dashed-heading{
-}
-
-.separator{
-  display: flex;
-  align-items: center;
-}
-
-.separator h2{
-  padding: 0 0.5rem; 
-}
-
-.separator .line{
-  flex: 1;
-  height: 1px;
-  background-color: #ffffff;
-  opacity: 30%;
-}
-
-.about-me-text{
-  width: 40%;
-  height: 99%; 
-  margin-top: 0; 
-  line-height: 25px;
-}
-
-.about-me-image{
-  width: 40%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-}
-
-.about-me-image-container{
-  width: 300px;
-  height: 300px;
-  margin-left: 0;
-  box-shadow: 8px 8px 2px teal;
-}
-
-.about-image{
-  width: 300px;
-  height: 300px;
-}
-
-.proficiency {
-  width: 80%;
-}
-
-.proficiency-ul {
-  width: 100%;
-  padding-left: 5px;
-  list-style-type: none;
-  display: flex;
-  justify-content: space-around;
-  height: 15%;
-}
-
- .proficiency-li {
-  padding-left: 15px;
-  background-image: url('Capture.PNG');
-  background-position: 5px 5px;
-  background-repeat: no-repeat;
-  width: 100%;
-  display: inline;
-} 
-
-/* SMALL SCREENS, LAPTOPS */
-@media only screen and (max-width: 1024px) {
-
-.about-me{
-  height: 80vh;
-}
-
-.about-me-content{
-  width: 85%;
-  height: 98%;
-}
-
-.separator h2{
-  padding: 0 0.5rem; 
-}
-
-.separator .line{
-  flex: 1;
-  height: 1px;
-  background-color: #ffffff;
-}
-
-.about-me-text{
-  width: 50%;
-  height: 98%; 
-  padding: 0 10px;
-  margin-top: -10px; 
-}
-
-.about-me-image{
-
-}
-
-.about-me-image-container{
-  width: 250px;
-  height: 250px;
-}
-
-.about-image{
-  width: 250px;
-  height: 250px;
-}
-
- .proficiency-li {
-  background-position: 0 5px;
-} 
-} 
-
- /* iPADS, TABLETS */
- @media only screen and (max-width: 768px) {
-   
-.about-me{
-  height: 100vh;
-  margin-top: 40px; 
-
-}
-
-.about-me-content{
-  border: 2px solid rgb(0, 255, 179);
-  flex-direction: column;
-  margin-top: -50px; 
-  padding: 0 15px;
-  width: 95%;
-  height: 95%;
-}
-
-.about-me-text{
-  border: 2px solid rgb(247, 7, 239);
-  width: 95%;
-  height: 60%; 
-  margin-top: 15px; 
-  padding: 0 10px;
-  line-height: 20px;
-}
-
-.about-me-image{
-  border: 2px solid yellow;
-  width: 90%;
-  height: 40%; 
-}
-
-.about-me-image-container{
-  width: 250px;
-  height: 250px;
-  margin-left: 20px;
-  box-shadow: 8px 8px 2px teal;
-}
-
-.about-image{
-  width: 250px;
-  height: 250px;
-}
-
-.about-image{
-  width: 100%;
-  height: 100%;
-}
-
-.proficiency{
-  height: 30%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.proficiency-ul {
-  width: 60%;
-  height: 80%;
-  margin-top: 5px;
-  padding: 10px 20px;
-}
-
-.proficiency-li{
-}
-
- }
- /* MOBILE LANDSCAPE */
- @media (max-width: 750px) and (max-height: 500px) and (orientation: landscape) {
-   
-  .about-me{
-    height: 180vh;
-  }
-  
-  .about-me-content{
-    flex-direction: column;
-    margin-top: -10px; 
-    width: 95%;
-    height: 95%;
-  }
-  
-  .about-me-text{
-    width: 90%;
-    height: 60%; 
-    margin-top: 5px; 
-    line-height: 20px;
-  }
-
-  .about-me-image{
-    height: 40%;
-
-  }
-  
-  .about-me-image-container{
-    width: 200px;
-    height: 200px;
-    margin-left: 20px;
-    box-shadow: 8px 8px 2px teal;
-  }
-  
-  .about-image{
-    width: 100%;
-    height: 100%;
-  }
-  
-  .proficiency-ul {
-    width: 60%;
-  }
-
-  .proficiency-li {
-    padding-left: 5px;
-    background-position: 0 3px;
-    display: inline;
-    font-size: 15px;
-  } 
-
-} 
-
-/* MOBILE PHONE POTRAIT */
-@media only screen and (max-width: 480px) {
-  
-.about-me{
-  height: 110vh;
-  margin-top: 20px;
-}
-
-.about-me-content{
-  flex-direction: column;
-  margin-top: -60px; 
-  width: 95%;
-  height: 95%;
-}
-
-.about-me-text{
-  width: 90%;
-  height: 60%; 
-  margin-top: 0; 
-  line-height: 18px;
-}
-
-.about-me-image{
-  margin-top: 30px;
-  height: 40%;
-
-}
-
-.about-me-image-container{
-  width: 200px;
-  height: 200px;
-  margin-left: 0;
-  box-shadow: 8px 8px 2px teal;
-}
-
-.about-image{
-  width: 200px;
-  height: 200px;
-}
-
-.proficiency-ul {
-  width: 98%;
-}
-
-.proficiency-li {
-  padding-left: 10px;
-  background-position: 0 3px;
-  display: inline;
-  font-size: 12px;
-} 
-}
-/* ABOUT ME SECTION ENDS */
-
-
-
-/* PROJECTS SECTION STARTS */
-.projects{
-  margin-top: 50px;
-  height: 180vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center; 
-}
-
-.projects-container{
-  width: 95%;
-  height: 90%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  justify-content: space-around;
-  align-items: center;
-}
-
-.project-1, .project-2, .project-3{
-  width: 90%;
-  height: 33%;
-  height: 95%;
-  padding: 0 20px 0 0;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-}
-
-#project-2{
-  flex-direction: row-reverse;
-  margin-left: 100px;
-}
-
-.project-content-1{
-  background-color: rgb(34, 34, 112);
-  padding: 10px 10px 10px 20px;
-  width: 50%;
-  height: 50%;
-  position: relative;
-  left: 60px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  justify-content: space-between;
-}
-
-#project-content-1{
-  left: -60px;
-}
-
-.project-topic{
-  height: 15%;
-
-}
-
-.project-description{
-  height: 45%;
-}
-
-.project-paragraph{
-  margin: 0;
-}
-
-.project-tech{
-  text-align: center;
-  height: 10%;
-  word-spacing: 30px;
-
-}
-
-.project-links{
-  height: 15%;
-  word-spacing: 10px;
-}
-
-
-.github, .external-link{
-  width: 25px;
-  height: 25px;
-}
-
-#project-links-2{
-  text-align: end;
-}
-
-
-.project-content-2{
-  width: 40%;
-  height: 90%;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-}
-
-.project-content-2-image{
-  width: 90%;
-  height: 105%;
-}
-
-#project-img-2{
-  width: 90%;
-  height: 100%;
-}
-
-#project-img-3{
-  width: 90%;
-  height: 100%;
-}
-
-/* SMALL SCREENS, LAPTOPS */
-@media only screen and (max-width: 1024px) {
-    .projects{
-      height: 180vh;
-      margin-top: 0px;
-    }
-    
-    .projects-container{
-    }
-
-
-    .project-1, .project-2, .project-3{
-      width: 95%;
-      height: 33%;
-      height: 95%;
-      padding: 0 20px 0 0;
-    }
-
-    .project-content-1{
-      padding: 10px 10px 5px 20px;
-      width: 60%;
-      height: 40%;
-      left: 60px;
-    }
-    
-#project-content-1{
-  left: -60px;
-}
-
-.project-topic{
-  height: 12%;
-
-}
-
-.project-description{
-  height: 50%;
-}
-
-
-.github, .external-link{
-  width: 20px;
-  height: 20px;
-}
-
-.project-content-2{
-  width: 55%;
-  height: 85%;
-}
-
-
-#project-img-2{
-  width: 90%;
-  height: 95%;
-}
-
-#project-img-3{
-  width: 90%;
-  height: 100%;
-}
-
-} 
-
- /* iPADS, TABLETS */
- @media only screen and (max-width: 768px) {
-   .projects{
-     height: 150vh;
-   }
-   
-   .projects-container{
-   }
-
-   .project-1, .project-2, .project-3{
-    width: 99%;
-    height: 33%;
-    padding: 0 20px 0 0;
-    flex-direction: row;
-  }
-
-  #project-2{
-  }
-
-  .project-content-1{
-    background-color: rgb(34, 34, 112);
-    padding: 5px 5px 5px 10px;
-    width: 70%;
-    height: 50%;
-    position: relative;
-    left: 40px;
-  }
-
-  .project-content-2{
-    width: 35%;
-    height: 90%;
-  }
-
-  .project-content-2-image{
-    width: 110%;
-    height: 90%;
-  }
-
-#project-img-2{
-  width: 110%;
-  height: 85%;
-}
-
-#project-img-3{
-  width: 110%;
-  height: 85%;
-}
-
-       
-} 
-
- /* MOBILE LANDSCAPE */
- @media (max-width: 750px) and (max-height: 500px) and (orientation: landscape) { 
-   
-  .projects{
-    height: 250vh;
-  }
-  
-  .projects-container{
-    overflow: hidden;
-  }
-
-  .project-1, .project-2, .project-3{
-   width: 99%;
-   height: 33%;
-   padding: 0 20px 0 0;
-   flex-direction: row;
- }
-
- #project-2{
- }
-
- .project-content-1{
-   background-color: rgb(34, 34, 112);
-   padding: 5px 5px 5px 10px;
-   width: 70%;
-   height: 50%;
-   position: relative;
-   left: 40px;
- }
-
- .project-content-2{
-   width: 35%;
-   height: 90%;
- }
-
- .project-content-2-image{
-   width: 110%;
-   height: 90%;
- }
-
-#project-img-2{
- width: 110%;
- height: 85%;
-}
-
-#project-img-3{
- width: 110%;
- height: 85%;
-}     
-} 
-
-/* MOBILE PHONE POTRAIT */
-@media only screen and (max-width: 480px) { 
-  
-  .projects{
-    height: 220vh;
-    margin-top: 20px;
-
-  }
-
-  .projects-container{
-    margin-top: 100px;
-    width: 99%;
-    height: 90%;
-  }
-
-  .project-1, .project-2, .project-3{
-   width: 95%;
-   height: 40%;
-   padding: 4px;
-   flex-direction: column-reverse;
- }
-
- #project-2{
-   margin-left: 0;
-   flex-direction: column-reverse;
- }
-
- .project-content-1{
-   background-color: rgb(34, 34, 112);
-   color: #d8c0b7;
-   font-size: 15px;
-   opacity: 90%;
-   padding: 5px;
-   width: 95%;
-   height: 80%;
-   left: 0;
-   bottom: 100px;
- }
-
- #project-content-1{
-  left: 0;
-}
-
-
-.project-topic{
-  height: 15%;
-}
-
-.project-description{
-  height: 60%;
-}
-
-.project-paragraph{
-  font-size: 12px;
-  padding: 3px;
-  margin: 0;
-}
-
-.project-tech{
-  word-spacing: 5px;
-  height: 10%;
-  margin: 5px 2px 5px 2px;
-}
-
-.github, .external-link{
-  height: 10%;
-  width: 20px;
-  height: 20px;
-}
-
-#project-links-2{
-  text-align: start;
-}
-
- .project-content-2{
-  display: inline;
-   overflow: hidden;
-   width: 99%;
-   height: 120%;
- }
-
- .project-content-2-image{
-   width: 100%;
-   height: 120%;
- }
-
-#project-img-2{
-  overflow: visible; 
-  width: 100%;
-  height: 100%;
-  /* inherits: unset; */
-}
-
-#project-img-3{
-  /* inherits: unset; */
-  overflow: visible; 
- width: 100%;
- height: 100%; 
-}
-}
-/* PROJECTS SECTION ENDS */
-
-
-
-/* OTHER PROJECTS SECTION STARTS */
-.other-projects{
-  height: 180vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-
-}
-
-.other-projects-container{
-  padding: 0 10px 0 10px;
-  width: 85%;
-  height: 90%;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  justify-content: space-around;
-  align-items: center;
-}
-
-.other-projects-content{
-  height: 45%;
-  width: 28%;
-}
-
-.other-projects-content-1{
-  background-color: yellow;
-  height: 40%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.other-projects-image{
-  width: 100%;
-  height: 100%;
-}
-
-.other-projects-content-2{
-  background-color: rgb(34, 34, 112);
-  height: 60%;
-  padding: 0 5px 0 5px;
-}
-
-#other-projects-topic{
-}
-
-#other-projects-description{
-  height: 60%;
-}
-
-#other-projects-paragraph{
-  height: 100%;
-  padding: 5px;
-}
-
-#other-projects-tech{
-  word-spacing: 10px;
-  margin-top: -15px;
-}
-
-#other-projects-links{
-  height: 10%;
-  word-spacing: 20px;
-  margin-top: 10px;
-}
-
- 
- /* SMALL SCREENS, LAPTOPS */
- @media only screen and (max-width: 1024px) {
-    
-.other-projects-container{
-  padding: 0 5px 0 5px;
-  width: 80%;
-  height: 90%;
-}
-
-.other-projects-content{
-  height: 45%;
-  width: 40%;
-}
-
-.other-projects-content-1{
-  background-color: yellow;
-  height: 40%;
-}
-.other-projects-content-2{
-  background-color: rgb(34, 34, 112);
-  height: 60%;
-}
-
-#other-projects-topic{
-}
-
-#other-projects-description{
-  height: 60%;
-}
-
-#other-projects-paragraph{
-  height: 100%;
-  padding: 5px;
-}
-
-#other-projects-tech{
-  word-spacing: 10px;
-  margin-top: 10px;
-}
-
-#other-projects-links{
-  height: 10%;
-  word-spacing: 20px;
-  margin-top: 5px;
-}
-} 
-
- /* iPADS, TABLETS */
- @media only screen and (max-width: 768px) {
-    
-  .other-projects{
-    height: 300vh;
-  }
-  
-  .other-projects-container{
-    padding: 0 5px 0 5px;
-    width: 95%;
-    height: 90%;
-  }
-
-  .other-projects-content{
-    height: 25%;
-    width: 90%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  
-.other-projects-content-1{
-  background-color: rgb(153, 169, 202);
-  height: 40%;
-  width: 70%;
-}
-
-.other-projects-image{
-  width: 100%;
-  height: 100%;
-}
-
-.other-projects-content-2{
-  background-color: rgb(34, 34, 112);
-  height: 50%;
-  width: 70%;
-}
-
-#other-projects-topic{
-  height: 15%;
-}
-
-#other-projects-description{
-  height: 45%;
-}
-
-#other-projects-paragraph{
-  height: 100%;
-  padding: 3px 5px 0 5px;
-}
-
-#other-projects-tech{
-  word-spacing: 30px;
-  margin-top: 10px;
-}
-
-#other-projects-links{
-  height: 10%;
-  word-spacing: 15px;
-  margin-top: 10px;
-}
-
-} 
-
- /* MOBILE LANDSCAPE */
- @media (max-width: 750px) and (max-height: 500px) and (orientation: landscape) { 
-  
-  .other-projects{
-    margin-top: -20px;
-     height: 500vh;
-   }
-
-   .other-projects-container{
-     height: 90%;
-   }
-
-   .other-projects-content{
-    height: 25%;
-  }
-
-   .other-projects-content-1{
-     height: 40%;
-   }
-
-   .other-projects-content-2{
-    height: 50%;
-  }
-} 
-
-/* MOBILE PHONE POTRAIT */
-@media only screen and (max-width: 480px) {
-      
-.other-projects-container{
-  padding: 0;
-  width: 100%;
-  height: 90%;
-}
-
-.other-projects-content{
-  height: 25%;
-  width: 100%;
-}
-
-.other-projects-content-1{
-  background-color: yellow;
-  height: 40%;
-  width: 90%;
-}
-.other-projects-content-2{
-  background-color: rgb(34, 34, 112);
-  font-size: 15px;
-  width: 90%;
-  height: 50%;
-  justify-content: space-between;
-}
-
-#other-projects-topic{
-}
-
-#other-projects-description{
-  height: 45%;
-}
-
-#other-projects-paragraph{
-  height: 100%;
-  padding: 2px;
-}
-
-#other-projects-tech{
-  word-spacing: 5px;
-  margin-top: 10px;
-}
-
-#other-projects-links{
-  height: 10%;
-  word-spacing: 10px;
-  margin-top: 10px;
-}
-
-}
-/* OTHER PROJECTS SECTION ENDS */
-
-.footer{
-  background: transparent;
-  height: 10vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin-top: 20px;
-}
-
-.footer-icons{
-height: 40px;
-width: 40px;
-}
-
-
-
-
 
